eks_cicd/namespace-prod.yaml
#creating namespaces
kind: Namespace  
apiVersion: v1  
metadata:  
 name: cluster-2-prod  
 labels:  
   name: cluster-2-prod
