eks_cicd/namespace-staging.yaml
#creating namespaces
kind: Namespace  
apiVersion: v1  
metadata:  
 name: cluster-2-staging  
 labels:  
   name: cluster-2-staging
