eks_cicd/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: studentmanagment
  namespace: demo
  labels:
    app: studentmanagment
    service: studentmanagment
spec:
  selector:
    app: studentmanagment
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
